RESOLVED FIXED271662
REGRESSION(276505@main) reloading after crashing registers RegistrableDomain as a public suffix
https://bugs.webkit.org/show_bug.cgi?id=271662
Summary REGRESSION(276505@main) reloading after crashing registers RegistrableDomain ...
Alex Christensen
Reported 2024-03-25 10:52:53 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-25 10:53:05 PDT
Alex Christensen
Comment 2 2024-03-25 10:54:58 PDT
EWS
Comment 3 2024-03-25 11:27:45 PDT
Committed 276635@main (a4b39a8c7766): <https://commits.webkit.org/276635@main> Reviewed commits have been landed. Closing PR #26425 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.