Cherry-pick a4b39a8c7766. rdar://125363034

REGRESSION(276505@main) reloading after crashing registers RegistrableDomain as a public suffix
    https://bugs.webkit.org/show_bug.cgi?id=271662
    rdar://125363034

    Reviewed by Sihui Liu.

    topPrivatelyControlledDomain was actually unused, but what we should be sending as a public suffix
    should actually be a public suffix.

    * Source/WebKit/UIProcess/WebPageProxy.cpp:
    (WebKit::WebPageProxy::launchProcessForReload):

    Canonical link: https://commits.webkit.org/276635@main

Identifier: 276609.4@safari-7619.1.7-branch